@@ -10,6 +10,24 @@
 
 **LinkedIn Profile:** https://www.linkedin.com/in/george-fung
 
+## Table of Contents
+- [Developer Information](#developer-information)
+- [Introduction](#introduction)
+- [Features](#features)
+- [Getting Started](#getting-started)
+  - [Prerequisites](#prerequisites)
+  - [Time Complexity of Main Operations](#time-complexity-of-main-operations)
+- [Performance Profiling Report](#performance-profiling-report)
+  - [Garbage Collector Performance Analysis](#garbage-collector-performance-analysis)
+  - [Test Environment Specifications](#test-environment-specifications)
+  - [Market Data Specifications](#market-data-specifications)
+  - [Garbage Collector Configurations](#garbage-collector-configurations)
+    - [G1GC VS ZGC](#g1gc-vs-zgc)
+    - [Enable Generation in ZGC](#enable-generation-in-zgc)
+- [Design Consideration](#design-consideration)
+  - [Design Patterns](#design-patterns)
+- [Message Cycle of FIX in a Trade](#message-cycle-of-fix-in-a-trade)
+
 ## Introduction
 
 This project implements a Matching Engine, a key component in trading platforms and exchanges, responsible for handling buying and selling orders and matching them based on specific logic. The project is developed using Java SDK version 22 and helps understand the working of real-world trade execution.
@@ -63,16 +81,16 @@ List here the prerequisites and links to the installation procedure of each:
   * Amazon.com Inc. (AMZN)
 
 ### Garbage Collector Configurations
-
-#### G1GC Configuration
+#### G1GC VS ZGC 
+G1GC Configuration
 ```properties
 -XX:+UseG1GC -Xms18g -Xmx18g -XX:ConcGCThreads=12 -XX:+AlwaysPreTouch
 ```
-#### ZGC Configuration 1
+ZGC Configuration 1
 ```properties
 -XX:+UseZGC -Xms18g -Xmx18g -XX:ConcGCThreads=12 -XX:+AlwaysPreTouch
 ```
-#### ZGC Configuration 2
+ZGC Configuration 2
 ```properties
 -XX:+UseZGC -Xms18g -Xmx18g -XX:ConcGCThreads=12 -XX:+AlwaysPreTouch \
   -XX:+ZGenerational -XX:ZAllocationSpikeTolerance=2.0 -XX:MaxGCPauseMillis=1 -XX:ParallelGCThreads=16 -XX:ZCollectionInterval=5 -XX:ZFragmentationLimit=10
@@ -81,18 +99,41 @@ List here the prerequisites and links to the installation procedure of each:
 | Symbol   | Order Volume | Execution Rate | G1GC (ms) | ZGC - config 1 (ms) | ZGC - config 2 (ms) |
 |:---------|:-------------|:---------------|:----------|:--------------------|:--------------------|
 | AAPL     | 27,843       | 89.36%         | 27,767    | 28,367              | 27,661              |
-| AMZN     | 131,954      | 80.59%         | 135,135   | 190,101             | 129,629             |
+| AMZN     | 131,954      | 80.59%         | 132,196   | 220,101             | 136,869             |
 
-#### Performance Analysis
+Performance Analysis
 - Under the similar VM options, the performance of G1GC is better than ZGC (esp on large dataset).
 - ZGC's design optimizations become more apparent with larger heap sizes (>100GB)
 - Smaller heap sizes require careful ZGC parameter tuning for optimal performance (30% difference)
  
-### Conclusions
+Conclusions
 The performance analysis reveals that while G1GC provides better out-of-the-box performance for medium-sized heaps, ZGC can achieve superior performance through careful tuning. The 31.8% performance improvement in ZGC through optimization demonstrates its potential, despite not operating in its optimal large-heap environment (>100GB).
 
- 
+#### Enable Generation in ZGC
+ZGC Configuration 1
+```properties
+-XX:+UseZGC -Xms18g -Xmx18g -XX:ConcGCThreads=12 -XX:+AlwaysPreTouch -XX:ZAllocationSpikeTolerance=1.5 \
+-XX:MaxGCPauseMillis=1 -XX:ParallelGCThreads=16 -XX:ZCollectionInterval=3 -XX:ZFragmentationLimit=10 -XX:ZUncommitDelay=3
+```
+ZGC Configuration 2
+```properties
+-XX:+UseZGC -Xms18g -Xmx18g **-XX:+ZGenerational** -XX:ConcGCThreads=12 -XX:+AlwaysPreTouch -XX:ZAllocationSpikeTolerance=1.5 \
+-XX:MaxGCPauseMillis=1 -XX:ParallelGCThreads=16 -XX:ZCollectionInterval=3 -XX:ZFragmentationLimit=10 -XX:ZUncommitDelay=3
+```
+| Symbol   | Order Volume | ZGC - config 1 (ms) | ZGC - config 2 (ms) |
+|:---------|:-------------|:--------------------|:--------------------|
+| AAPL     | 27,843       | 33,601              | 27,304              |
+| AMZN     | 131,954      | 141,434             | 135,544             |
 
+Performance Analysis
+- **ZGC Configuration 2 (with generational mode enabled)** consistently outperformed Configuration 1 across all test cases.  
+- Enabling generational garbage collection reduced execution time significantly, especially for **AAPL**, by approximately **18.7%** compared to Configuration 1.
+- Generational garbage collection helps optimize memory usage by categorizing objects based on their lifecycle (short-lived vs. long-lived), reducing overall pause times and improving throughput.
+
+Conclusions
+- Leveraging ZGC's generational mode can provide **substantial performance gains**, particularly for scenarios with moderate to high memory churn.
+- The smaller improvement in **AMZN's** execution time suggests that additional fine-tuning of generational parameters may be required for workloads with larger datasets or higher order volumes.
+- This analysis highlights the importance of generational garbage collection for improving responsiveness and throughput in high-frequency trading systems.
 
 ## Design Consideration
 - The time complexity of order handling is shown as below:
